FAQ entries mobile layout bug fix entry-container width would extend beyond entryCollection-container width

--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@ body{
 }
 @media only screen and (max-width: 1000px) {
   .aboutAstronight-textColumn{
-    width: 80vw;
+    width: auto;
   }
 }
 
@@ -108,6 +108,7 @@ body{
 }
 .faq-entryCollection-container{
   text-align: center;
+  width: auto;
   padding: 0px 32px;
 }
 .faq-entry-container{
@@ -115,7 +116,7 @@ body{
   vertical-align: top;
   width: 40vw;
   max-width: 500px;
-  padding: 16px;
+  padding: 8px;
   margin: 4px 0px 4px 4px;
   border-radius: 8px;
 
@@ -123,7 +124,7 @@ body{
 }
 @media only screen and (max-width: 1100px) {
   .faq-entry-container{
-    width: 80vw;
+    width: calc(100% - 4px - 16px);
   }
 }
 .faq-entry-header{
@@ -141,6 +142,7 @@ body{
   font-weight:450
 }
 .faq-entry-body{
+  margin: 8px;
   display: none;
   text-align: justify;
 }
